<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/exclamation_mark"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/warning"
            android:src="@drawable/warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/dialog_message"
            android:textColor="@color/black_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/exclamation_mark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/exclamation_mark"
            app:layout_constraintTop_toTopOf="@+id/exclamation_mark" />
        <Button
            android:id="@+id/btn_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dialog_repeat"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dialog_cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_repeat"
            app:layout_constraintEnd_toStartOf="@id/btn_repeat"
            app:layout_constraintTop_toTopOf="@id/btn_repeat"
            tools:ignore="ButtonStyle" />



    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>